--- a/templates/plot.html
+++ b/templates/plot.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>It's a plot time</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='CSS/plot.css') }}" >
     </head>
   <body>
