--- a/templates/error.html
+++ b/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Something went wrong</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='CSS/error.css') }}" >
     </head>
     <head>
