--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Pollution in Poland</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='CSS/master.css') }}" >
     </head>
     <head>
